--- a/index.html
+++ b/index.html
@@ -26,7 +26,11 @@
 
 body{
  margin:0;
- background:radial-gradient(circle at top,#0b1f4d,#020617 70%);
+ background:
+  radial-gradient(circle at top,
+   #334155 0%,
+   #1e293b 35%,
+   #020617 75%);
  color:var(--text);
 }
 
@@ -34,17 +38,6 @@ body{
  max-width:1600px;
  margin:auto;
  padding:clamp(16px,2vw,28px);
- animation:fadePage .6s ease;
-}
-
-/* ANIMAÇÕES */
-@keyframes fadeUp{
- from{opacity:0; transform:translateY(14px)}
- to{opacity:1; transform:translateY(0)}
-}
-@keyframes fadePage{
- from{opacity:0}
- to{opacity:1}
 }
 
 /* HEADER */
@@ -53,21 +46,18 @@ body{
  flex-direction:column;
  align-items:flex-start;
  margin-bottom:36px;
- animation:fadeUp .8s ease;
 }
 
 .header img{
- height:84px;                 /* LOGO MAIOR */
- max-width:100%;
+ height:84px;
 }
 
 .dashboard-title{
- margin-top:20px;             /* MAIS ABAIXO */
- font-size:22px;              /* TEXTO MAIOR */
+ margin-top:20px;
+ font-size:22px;
  letter-spacing:4px;
  font-weight:900;
  color:var(--blue);
- opacity:.95;
 }
 
 /* FILTROS */
@@ -76,7 +66,6 @@ body{
  gap:12px;
  margin-bottom:24px;
  flex-wrap:wrap;
- animation:fadeUp .9s ease;
 }
 
 select{
@@ -89,15 +78,12 @@ select{
  width:220px;
 }
 
-select:disabled{opacity:.5}
-
 /* KPIs */
 .kpis{
  display:grid;
  grid-template-columns:repeat(auto-fit,minmax(180px,1fr));
  gap:16px;
  margin-bottom:28px;
- animation:fadeUp 1s ease;
 }
 
 .kpi{
@@ -122,10 +108,9 @@ select:disabled{opacity:.5}
 /* GRÁFICOS */
 .cards{
  display:grid;
- grid-template-columns:repeat(auto-fit,minmax(420px,1fr));
+ grid-template-columns:1.3fr 1fr;
  gap:16px;
  margin-bottom:24px;
- animation:fadeUp 1.1s ease;
 }
 
 .card{
@@ -133,7 +118,7 @@ select:disabled{opacity:.5}
  border:1px solid var(--border);
  border-radius:22px;
  padding:18px;
- height:clamp(320px,38vw,440px);
+ height:420px;
  display:flex;
  flex-direction:column;
 }
@@ -171,36 +156,26 @@ thead{
 th{
  color:var(--blue);
  font-weight:700;
- font-size:17px;
- padding:18px 12px;
+ font-size:16px;
+ padding:14px 10px;
  text-align:center;
 }
 
 td{
- padding:15px 12px;
+ padding:12px 10px;
  border-bottom:1px solid var(--border);
- font-size:15px;
  text-align:center;
 }
 
 thead th:first-child,
 tbody td:first-child{
  text-align:left;
- padding-left:18px;
+ padding-left:16px;
 }
 
 tr.total{
  background:rgba(34,197,94,.08);
  font-weight:700;
-}
-
-/* RESPONSIVO */
-@media(max-width:900px){
- .cards{grid-template-columns:1fr}
-}
-
-@media(max-width:600px){
- select{width:100%}
 }
 </style>
 </head>
@@ -234,12 +209,17 @@ tr.total{
 <!-- GRÁFICOS -->
 <div class="cards">
  <div class="card">
-  <strong>📈 Balanço de Pontos</strong>
-  <div class="chart-wrap"><canvas id="chartLinha"></canvas></div>
+  <strong>📈 Evolução Acumulada de Pontos</strong>
+  <div class="chart-wrap">
+   <canvas id="chartAcumulado"></canvas>
+  </div>
  </div>
+
  <div class="card">
   <strong>📊 Gains x Stops x 0x0</strong>
-  <div class="chart-wrap"><canvas id="chartBar"></canvas></div>
+  <div class="chart-wrap">
+   <canvas id="chartBar"></canvas>
+  </div>
  </div>
 </div>
 
@@ -270,7 +250,12 @@ tr.total{
 <script>
 const CSV_URL="https://docs.google.com/spreadsheets/d/e/2PACX-1vTbyybCny81vfVXQHmtlkKEOHHJ6xJ_pKSG_4ndkK0tH-YocrFeWY7qL41TS1IfvRQjLSbLIILV56OV/pub?output=csv";
 const nomesMeses={"01":"Janeiro","02":"Fevereiro","03":"Março","04":"Abril","05":"Maio","06":"Junho","07":"Julho","08":"Agosto","09":"Setembro","10":"Outubro","11":"Novembro","12":"Dezembro"};
-let data=[],chartLinha,chartBar;
+
+let data=[],chartAcumulado,chartBar;
+
+const hoje = new Date();
+const anoAtual = String(hoje.getFullYear());
+const mesAtual = String(hoje.getMonth()+1).padStart(2,"0");
 
 async function loadCSV(){
  const r=await fetch(CSV_URL,{cache:"no-store"});
@@ -279,48 +264,51 @@ async function loadCSV(){
 }
 
 function parseCSV(t){
- const rows=t.trim().split(/\r?\n/); rows.shift();
+ const rows=t.trim().split(/\r?\n/);
+ rows.shift();
  data=rows.map(r=>{
   const c=r.split(",");
   return{
-   dia:c[0], semana:c[1], ativo:c[2],
-   ano:c[0].substring(6,10), mes:c[0].substring(3,5),
-   pontos:+c[3]||0, trades:+c[4]||0,
-   gain:+c[5]||0, stop:+c[6]||0, zero:+c[7]||0
-  }
+   dia:c[0],
+   semana:c[1],
+   ativo:c[2],
+   ano:c[0].substring(6,10),
+   mes:c[0].substring(3,5),
+   pontos:+c[3]||0,
+   trades:+c[4]||0,
+   gain:+c[5]||0,
+   stop:+c[6]||0,
+   zero:+c[7]||0
+  };
  });
  initFiltros();
 }
 
 function initFiltros(){
  const anos=[...new Set(data.map(d=>d.ano))].sort();
- filtroAno.innerHTML=anos.map(a=>`<option>${a}</option>`).join("");
- filtroAno.value=new Date().getFullYear();
+ filtroAno.innerHTML=anos.map(a=>`<option value="${a}">${a}</option>`).join("");
+ filtroAno.value = anos.includes(anoAtual) ? anoAtual : anos[anos.length-1];
  filtroAno.onchange=()=>{initMeses();atualizar();}
  initMeses();
 }
 
 function initMeses(){
- const mesAtual=String(new Date().getMonth()+1).padStart(2,"0");
- const meses=[...new Set(data.filter(d=>d.ano==filtroAno.value).map(d=>d.mes))];
- filtroMes.innerHTML=`<option value="ALL">Todos os meses</option>`+
- meses.map(m=>`<option value="${m}">${nomesMeses[m]}</option>`).join("");
- filtroMes.value=meses.includes(mesAtual)?mesAtual:"ALL";
+ const meses=[...new Set(data.filter(d=>d.ano===filtroAno.value).map(d=>d.mes))];
+ filtroMes.innerHTML='<option value="ALL">Todos os meses</option>'+
+  meses.map(m=>`<option value="${m}">${nomesMeses[m]}</option>`).join("");
+ filtroMes.value = meses.includes(mesAtual) ? mesAtual : "ALL";
  filtroMes.onchange=()=>{initSemanas();atualizar();}
  initSemanas();
 }
 
 function initSemanas(){
- if(filtroMes.value==="ALL"){
-  filtroSemana.innerHTML='<option value="ALL">Todas as semanas</option>';
-  filtroSemana.disabled=true;
-  atualizar();
-  return;
- }
- filtroSemana.disabled=false;
- const semanas=[...new Set(data.filter(d=>d.ano==filtroAno.value && d.mes==filtroMes.value).map(d=>d.semana))];
+ const semanas=[...new Set(
+  data.filter(d=>d.ano===filtroAno.value &&
+   (filtroMes.value==="ALL"||d.mes===filtroMes.value))
+  .map(d=>d.semana)
+ )];
  filtroSemana.innerHTML='<option value="ALL">Todas as semanas</option>'+
- semanas.map(s=>`<option>${s}</option>`).join("");
+  semanas.map(s=>`<option value="${s}">${s}</option>`).join("");
  filtroSemana.value="ALL";
  filtroSemana.onchange=atualizar;
  atualizar();
@@ -328,18 +316,23 @@ function initSemanas(){
 
 function atualizar(){
  const f=data.filter(d=>
-  d.ano==filtroAno.value &&
-  (filtroMes.value==="ALL"||d.mes==filtroMes.value) &&
-  (filtroSemana.value==="ALL"||d.semana==filtroSemana.value)
+  d.ano===filtroAno.value &&
+  (filtroMes.value==="ALL"||d.mes===filtroMes.value) &&
+  (filtroSemana.value==="ALL"||d.semana===filtroSemana.value)
  );
- renderKPIs(f); renderTabela(f); renderGraficos(f);
+ renderKPIs(f);
+ renderTabela(f);
+ renderGraficos(f);
 }
 
 function renderKPIs(f){
  let t={trades:0,pontos:0,gain:0,stop:0,zero:0};
  f.forEach(d=>{
-  t.trades+=d.trades; t.pontos+=d.pontos;
-  t.gain+=d.gain; t.stop+=d.stop; t.zero+=d.zero;
+  t.trades+=d.trades;
+  t.pontos+=d.pontos;
+  t.gain+=d.gain;
+  t.stop+=d.stop;
+  t.zero+=d.zero;
  });
  const ops=t.gain+t.stop;
  kTrades.textContent=t.trades;
@@ -352,18 +345,21 @@ function renderKPIs(f){
 
 function renderTabela(f){
  tbody.innerHTML="";
- let tot={pontos:0,trades:0,gain:0,stop:0,zero:0};
+ let tot={p:0,t:0,g:0,s:0,z:0};
  f.forEach(d=>{
-  tot.pontos+=d.pontos; tot.trades+=d.trades;
-  tot.gain+=d.gain; tot.stop+=d.stop; tot.zero+=d.zero;
+  tot.p+=d.pontos;
+  tot.t+=d.trades;
+  tot.g+=d.gain;
+  tot.s+=d.stop;
+  tot.z+=d.zero;
   tbody.innerHTML+=`
   <tr>
    <td>${d.dia}</td>
    <td style="color:${d.pontos<0?'var(--red)':'var(--green)'}">${d.pontos}</td>
    <td>${d.trades}</td>
-   <td style="color:var(--green)">${d.gain}</td>
-   <td style="color:var(--red)">${d.stop}</td>
-   <td style="color:var(--yellow)">${d.zero}</td>
+   <td>${d.gain}</td>
+   <td>${d.stop}</td>
+   <td>${d.zero}</td>
    <td>${d.ativo}</td>
    <td>${d.semana}</td>
   </tr>`;
@@ -371,40 +367,74 @@ function renderTabela(f){
  tbody.innerHTML+=`
  <tr class="total">
   <td>TOTAL</td>
-  <td>${tot.pontos}</td>
-  <td>${tot.trades}</td>
-  <td>${tot.gain}</td>
-  <td>${tot.stop}</td>
-  <td>${tot.zero}</td>
+  <td>${tot.p}</td>
+  <td>${tot.t}</td>
+  <td>${tot.g}</td>
+  <td>${tot.s}</td>
+  <td>${tot.z}</td>
   <td colspan="2"></td>
  </tr>`;
 }
 
 function renderGraficos(f){
- let acc=0; const labels=[],saldo=[];
- f.forEach(d=>{ acc+=d.pontos; labels.push(d.dia); saldo.push(acc); });
+ let saldo=0;
+ const labels=[];
+ const acumulado=[0];
 
- if(chartLinha)chartLinha.destroy();
- if(chartBar)chartBar.destroy();
+ f.forEach(d=>{
+  saldo+=d.pontos;
+  labels.push(d.dia);
+  acumulado.push(saldo);
+ });
 
- chartLinha=new Chart(chartLinhaEl,{
+ if(chartAcumulado) chartAcumulado.destroy();
+ if(chartBar) chartBar.destroy();
+
+ chartAcumulado=new Chart(chartAcumuladoEl,{
   type:"line",
-  data:{labels,datasets:[{data:saldo,borderColor:"#22c55e",tension:.35,fill:true,backgroundColor:"rgba(34,197,94,.18)"}]},
-  options:{responsive:true,maintainAspectRatio:false,plugins:{legend:{display:false}}}
+  data:{
+   labels:["Início",...labels],
+   datasets:[{
+    data:acumulado,
+    borderColor:"#22c55e",
+    backgroundColor:"rgba(34,197,94,.18)",
+    fill:true,
+    tension:.35
+   }]
+  },
+  options:{
+   responsive:true,
+   maintainAspectRatio:false,
+   plugins:{legend:{display:false}},
+   scales:{y:{beginAtZero:true}}
+  }
  });
 
  chartBar=new Chart(chartBarEl,{
   type:"bar",
-  data:{labels:["Gain","Stop","0x0"],datasets:[{
-   data:[f.reduce((a,b)=>a+b.gain,0),f.reduce((a,b)=>a+b.stop,0),f.reduce((a,b)=>a+b.zero,0)],
-   backgroundColor:["#22c55e","#ef4444","#facc15"],borderRadius:12
-  }]},
-  options:{responsive:true,maintainAspectRatio:false,plugins:{legend:{display:false}}}
+  data:{
+   labels:["Gain","Stop","0x0"],
+   datasets:[{
+    data:[
+     f.reduce((a,b)=>a+b.gain,0),
+     f.reduce((a,b)=>a+b.stop,0),
+     f.reduce((a,b)=>a+b.zero,0)
+    ],
+    backgroundColor:["#22c55e","#ef4444","#facc15"],
+    borderRadius:10
+   }]
+  },
+  options:{
+   responsive:true,
+   maintainAspectRatio:false,
+   plugins:{legend:{display:false}}
+  }
  });
 }
 
-const chartLinhaEl=document.getElementById("chartLinha");
+const chartAcumuladoEl=document.getElementById("chartAcumulado");
 const chartBarEl=document.getElementById("chartBar");
+
 loadCSV();
 </script>
 </body>
