--- a/index.html
+++ b/index.html
@@ -48,9 +48,7 @@ body{
  margin-bottom:36px;
 }
 
-.header img{
- height:84px;
-}
+.header img{ height:84px; }
 
 .dashboard-title{
  margin-top:20px;
@@ -139,9 +137,7 @@ canvas{
 }
 
 /* TABELA */
-.table-wrap{
- overflow-x:auto;
-}
+.table-wrap{ overflow-x:auto; }
 
 table{
  width:100%;
@@ -177,26 +173,105 @@ tr.total{
  background:rgba(34,197,94,.08);
  font-weight:700;
 }
+
+/* CALENDÁRIO */
+.calendar-wrapper{
+ margin-bottom:28px;
+ background:linear-gradient(180deg,#050b1a,#030818);
+ border:1px solid var(--border);
+ border-radius:22px;
+ padding:18px;
+}
+
+.calendar-header{
+ display:grid;
+ grid-template-columns:repeat(7,1fr);
+ margin-bottom:10px;
+ text-align:center;
+ color:var(--muted);
+ font-size:14px;
+}
+
+.calendar-grid{
+ display:grid;
+ grid-template-columns:repeat(7,1fr);
+ gap:12px;
+}
+
+.day{
+ position:relative;
+ background:linear-gradient(180deg,#052e2b,#020617);
+ border:1px solid var(--border);
+ border-radius:16px;
+ min-height:120px;
+ padding:10px;
+ padding-bottom:42px;
+ display:flex;
+ flex-direction:column;
+}
+
+.day.positive{
+ background:linear-gradient(180deg,#053a32,#020617);
+}
+
+.day.negative{
+ background:linear-gradient(180deg,#3a0505,#020617);
+}
+
+.day-number{
+ font-size:14px;
+ color:var(--muted);
+}
+
+.day-points{
+ flex:1;
+ display:flex;
+ align-items:center;
+ justify-content:center;
+ font-size:26px;
+ font-weight:800;
+}
+
+.day-info{
+ font-size:11px;
+ color:var(--muted);
+ text-align:center;
+}
+
+.day-badge{
+ position:absolute;
+ bottom:8px;
+ left:50%;
+ transform:translateX(-50%);
+ background:rgba(0,0,0,.75);
+ border:1px solid var(--border);
+ border-radius:10px;
+ padding:5px 8px;
+ font-size:10px;
+ white-space:nowrap;
+}
+
+.empty{
+ background:transparent;
+ border:none;
+}
 </style>
 </head>
 
 <body>
 <div class="container">
 
-<!-- HEADER -->
 <div class="header">
  <img src="logo.png" alt="Mentoria NasdaqPro">
  <span class="dashboard-title">DASHBOARD</span>
 </div>
 
-<!-- FILTROS -->
 <div class="filters">
  <select id="filtroAno"></select>
  <select id="filtroMes"></select>
  <select id="filtroSemana"></select>
 </div>
 
-<!-- KPIs -->
 <div class="kpis">
  <div class="kpi"><span>Trades</span><strong id="kTrades">0</strong></div>
  <div class="kpi"><span>Pontos</span><strong id="kPontos">0</strong></div>
@@ -206,38 +281,36 @@ tr.total{
  <div class="kpi"><span>Assertividade</span><strong id="kAcc">0%</strong></div>
 </div>
 
-<!-- GRÁFICOS -->
 <div class="cards">
  <div class="card">
   <strong>📈 Evolução Acumulada de Pontos</strong>
-  <div class="chart-wrap">
-   <canvas id="chartAcumulado"></canvas>
-  </div>
+  <div class="chart-wrap"><canvas id="chartAcumulado"></canvas></div>
  </div>
-
  <div class="card">
   <strong>📊 Gains x Stops x 0x0</strong>
-  <div class="chart-wrap">
-   <canvas id="chartBar"></canvas>
-  </div>
+  <div class="chart-wrap"><canvas id="chartBar"></canvas></div>
  </div>
 </div>
 
-<!-- TABELA -->
+<!-- CALENDÁRIO AGORA ANTES DA TABELA -->
+<div class="calendar-wrapper">
+ <strong>📅 Calendário Operacional</strong>
+ <div class="calendar-header">
+  <div>Dom</div><div>Seg</div><div>Ter</div>
+  <div>Qua</div><div>Qui</div><div>Sex</div><div>Sáb</div>
+ </div>
+ <div class="calendar-grid" id="calendar"></div>
+</div>
+
 <div class="card" style="height:auto">
  <strong>Tabela Operacional</strong>
  <div class="table-wrap">
   <table>
    <thead>
     <tr>
-     <th>Dia</th>
-     <th>Pontos</th>
-     <th>Trades</th>
-     <th>Gain</th>
-     <th>Stop</th>
-     <th>0x0</th>
-     <th>Ativo</th>
-     <th>Semana</th>
+     <th>Dia</th><th>Pontos</th><th>Trades</th>
+     <th>Gain</th><th>Stop</th><th>0x0</th>
+     <th>Ativo</th><th>Semana</th>
     </tr>
    </thead>
    <tbody id="tbody"></tbody>
@@ -251,11 +324,8 @@ tr.total{
 const CSV_URL="https://docs.google.com/spreadsheets/d/e/2PACX-1vTbyybCny81vfVXQHmtlkKEOHHJ6xJ_pKSG_4ndkK0tH-YocrFeWY7qL41TS1IfvRQjLSbLIILV56OV/pub?output=csv";
 const nomesMeses={"01":"Janeiro","02":"Fevereiro","03":"Março","04":"Abril","05":"Maio","06":"Junho","07":"Julho","08":"Agosto","09":"Setembro","10":"Outubro","11":"Novembro","12":"Dezembro"};
 
-let data=[],chartAcumulado,chartBar;
-
-const hoje = new Date();
-const anoAtual = String(hoje.getFullYear());
-const mesAtual = String(hoje.getMonth()+1).padStart(2,"0");
+let dadosCSV=[],chartAcumulado,chartBar;
+let primeiraCarga=true;
 
 async function loadCSV(){
  const r=await fetch(CSV_URL,{cache:"no-store"});
@@ -266,14 +336,16 @@ async function loadCSV(){
 function parseCSV(t){
  const rows=t.trim().split(/\r?\n/);
  rows.shift();
- data=rows.map(r=>{
+ dadosCSV=rows.map(r=>{
   const c=r.split(",");
+  const [d,m,a]=c[0].split("/");
   return{
    dia:c[0],
+   data:new Date(a,m-1,d),
    semana:c[1],
    ativo:c[2],
-   ano:c[0].substring(6,10),
-   mes:c[0].substring(3,5),
+   ano:a,
+   mes:m,
    pontos:+c[3]||0,
    trades:+c[4]||0,
    gain:+c[5]||0,
@@ -285,37 +357,67 @@ function parseCSV(t){
 }
 
 function initFiltros(){
- const anos=[...new Set(data.map(d=>d.ano))].sort();
+ const anos=[...new Set(dadosCSV.map(d=>d.ano))].sort();
  filtroAno.innerHTML=anos.map(a=>`<option value="${a}">${a}</option>`).join("");
- filtroAno.value = anos.includes(anoAtual) ? anoAtual : anos[anos.length-1];
- filtroAno.onchange=()=>{initMeses();atualizar();}
+
+ const anoAtual=new Date().getFullYear().toString();
+ filtroAno.value=anos.includes(anoAtual)?anoAtual:anos[anos.length-1];
+
+ filtroAno.onchange=()=>{
+  primeiraCarga=false;
+  initMeses();
+  atualizar();
+ };
+
  initMeses();
 }
 
 function initMeses(){
- const meses=[...new Set(data.filter(d=>d.ano===filtroAno.value).map(d=>d.mes))];
+ const meses=[...new Set(dadosCSV.filter(d=>d.ano===filtroAno.value).map(d=>d.mes))];
  filtroMes.innerHTML='<option value="ALL">Todos os meses</option>'+
   meses.map(m=>`<option value="${m}">${nomesMeses[m]}</option>`).join("");
- filtroMes.value = meses.includes(mesAtual) ? mesAtual : "ALL";
- filtroMes.onchange=()=>{initSemanas();atualizar();}
+
+ const mesAtual=(new Date().getMonth()+1).toString().padStart(2,"0");
+ filtroMes.value=primeiraCarga && meses.includes(mesAtual)?mesAtual:"ALL";
+
+ filtroMes.onchange=()=>{
+  primeiraCarga=false;
+  initSemanas();
+  atualizar();
+ };
+
  initSemanas();
 }
 
 function initSemanas(){
  const semanas=[...new Set(
-  data.filter(d=>d.ano===filtroAno.value &&
-   (filtroMes.value==="ALL"||d.mes===filtroMes.value))
-  .map(d=>d.semana)
- )];
+  dadosCSV.filter(d=>
+   d.ano===filtroAno.value &&
+   (filtroMes.value==="ALL"||d.mes===filtroMes.value)
+  ).map(d=>d.semana)
+ )].sort((a,b)=>a-b);
+
  filtroSemana.innerHTML='<option value="ALL">Todas as semanas</option>'+
   semanas.map(s=>`<option value="${s}">${s}</option>`).join("");
- filtroSemana.value="ALL";
- filtroSemana.onchange=atualizar;
+
+ if(primeiraCarga){
+  const hoje=new Date();
+  const atual=dadosCSV.find(d=>d.data.toDateString()===hoje.toDateString());
+  filtroSemana.value=atual?.semana || "ALL";
+ }else{
+  filtroSemana.value="ALL";
+ }
+
+ filtroSemana.onchange=()=>{
+  primeiraCarga=false;
+  atualizar();
+ };
+
  atualizar();
 }
 
 function atualizar(){
- const f=data.filter(d=>
+ const f=dadosCSV.filter(d=>
   d.ano===filtroAno.value &&
   (filtroMes.value==="ALL"||d.mes===filtroMes.value) &&
   (filtroSemana.value==="ALL"||d.semana===filtroSemana.value)
@@ -323,6 +425,7 @@ function atualizar(){
  renderKPIs(f);
  renderTabela(f);
  renderGraficos(f);
+ renderCalendario(f);
 }
 
 function renderKPIs(f){
@@ -347,89 +450,91 @@ function renderTabela(f){
  tbody.innerHTML="";
  let tot={p:0,t:0,g:0,s:0,z:0};
  f.forEach(d=>{
-  tot.p+=d.pontos;
-  tot.t+=d.trades;
-  tot.g+=d.gain;
-  tot.s+=d.stop;
-  tot.z+=d.zero;
+  tot.p+=d.pontos; tot.t+=d.trades;
+  tot.g+=d.gain; tot.s+=d.stop; tot.z+=d.zero;
   tbody.innerHTML+=`
-  <tr>
-   <td>${d.dia}</td>
-   <td style="color:${d.pontos<0?'var(--red)':'var(--green)'}">${d.pontos}</td>
-   <td>${d.trades}</td>
-   <td>${d.gain}</td>
-   <td>${d.stop}</td>
-   <td>${d.zero}</td>
-   <td>${d.ativo}</td>
-   <td>${d.semana}</td>
-  </tr>`;
+   <tr>
+    <td>${d.dia}</td>
+    <td style="color:${d.pontos<0?'var(--red)':'var(--green)'}">${d.pontos}</td>
+    <td>${d.trades}</td>
+    <td>${d.gain}</td>
+    <td>${d.stop}</td>
+    <td>${d.zero}</td>
+    <td>${d.ativo}</td>
+    <td>${d.semana}</td>
+   </tr>`;
  });
  tbody.innerHTML+=`
- <tr class="total">
-  <td>TOTAL</td>
-  <td>${tot.p}</td>
-  <td>${tot.t}</td>
-  <td>${tot.g}</td>
-  <td>${tot.s}</td>
-  <td>${tot.z}</td>
-  <td colspan="2"></td>
- </tr>`;
+  <tr class="total">
+   <td>TOTAL</td><td>${tot.p}</td><td>${tot.t}</td>
+   <td>${tot.g}</td><td>${tot.s}</td><td>${tot.z}</td>
+   <td colspan="2"></td>
+  </tr>`;
 }
 
 function renderGraficos(f){
- let saldo=0;
- const labels=[];
- const acumulado=[0];
-
- f.forEach(d=>{
-  saldo+=d.pontos;
-  labels.push(d.dia);
-  acumulado.push(saldo);
- });
-
- if(chartAcumulado) chartAcumulado.destroy();
- if(chartBar) chartBar.destroy();
+ let saldo=0,labels=[],ac=[0];
+ f.forEach(d=>{saldo+=d.pontos;labels.push(d.dia);ac.push(saldo);});
+ if(chartAcumulado)chartAcumulado.destroy();
+ if(chartBar)chartBar.destroy();
 
  chartAcumulado=new Chart(chartAcumuladoEl,{
   type:"line",
-  data:{
-   labels:["Início",...labels],
-   datasets:[{
-    data:acumulado,
-    borderColor:"#22c55e",
-    backgroundColor:"rgba(34,197,94,.18)",
-    fill:true,
-    tension:.35
-   }]
-  },
-  options:{
-   responsive:true,
-   maintainAspectRatio:false,
-   plugins:{legend:{display:false}},
-   scales:{y:{beginAtZero:true}}
-  }
+  data:{labels:["Início",...labels],datasets:[{data:ac,borderColor:"#22c55e",fill:true,tension:.35}]},
+  options:{responsive:true,maintainAspectRatio:false,plugins:{legend:{display:false}}}
  });
 
  chartBar=new Chart(chartBarEl,{
   type:"bar",
-  data:{
-   labels:["Gain","Stop","0x0"],
-   datasets:[{
-    data:[
-     f.reduce((a,b)=>a+b.gain,0),
-     f.reduce((a,b)=>a+b.stop,0),
-     f.reduce((a,b)=>a+b.zero,0)
-    ],
-    backgroundColor:["#22c55e","#ef4444","#facc15"],
-    borderRadius:10
-   }]
-  },
-  options:{
-   responsive:true,
-   maintainAspectRatio:false,
-   plugins:{legend:{display:false}}
-  }
+  data:{labels:["Gain","Stop","0x0"],datasets:[{data:[
+   f.reduce((a,b)=>a+b.gain,0),
+   f.reduce((a,b)=>a+b.stop,0),
+   f.reduce((a,b)=>a+b.zero,0)
+  ],backgroundColor:["#22c55e","#ef4444","#facc15"],borderRadius:10}]},
+  options:{responsive:true,maintainAspectRatio:false,plugins:{legend:{display:false}}}
  });
+}
+
+function renderCalendario(f){
+ const grid=document.getElementById("calendar");
+ grid.innerHTML="";
+ if(!f.length) return;
+
+ let base=f[0];
+ if(filtroMes.value!=="ALL"){
+  base=f.find(d=>d.mes===filtroMes.value)||f[0];
+ }
+
+ const ano=base.data.getFullYear();
+ const mes=base.data.getMonth();
+ const primeiro=new Date(ano,mes,1);
+ const ultimo=new Date(ano,mes+1,0);
+
+ for(let i=0;i<primeiro.getDay();i++)
+  grid.innerHTML+=`<div class="day empty"></div>`;
+
+ for(let d=1;d<=ultimo.getDate();d++){
+  const data=new Date(ano,mes,d);
+  const r=f.find(x=>x.data.toDateString()===data.toDateString());
+  let cls="day",pts="",info="",badge="";
+  if(r){
+   pts=r.pontos;
+   if(pts>0)cls+=" positive";
+   if(pts<0)cls+=" negative";
+   info=`Trades:${r.trades}<br>Gain:${r.gain} Stop:${r.stop}`;
+   badge=`<div class="day-badge">${r.semana} | ${r.ativo}</div>`;
+  }
+  grid.innerHTML+=`
+   <div class="${cls}">
+    <div class="day-number">${d}</div>
+    <div class="day-points"
+     style="color:${pts<0?'var(--red)':pts>0?'var(--green)':'var(--muted)'}">
+     ${pts??""}
+    </div>
+    <div class="day-info">${info}</div>
+    ${badge}
+   </div>`;
+ }
 }
 
 const chartAcumuladoEl=document.getElementById("chartAcumulado");
